--- a/analysis/SebiUnipan/milestone1.ipynb
+++ b/analysis/SebiUnipan/milestone1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -26,27 +26,42 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>39</th>\n",
-       "      <th>State-gov</th>\n",
-       "      <th>77516</th>\n",
-       "      <th>Bachelors</th>\n",
-       "      <th>13</th>\n",
-       "      <th>Never-married</th>\n",
-       "      <th>Adm-clerical</th>\n",
-       "      <th>Not-in-family</th>\n",
-       "      <th>White</th>\n",
-       "      <th>Male</th>\n",
-       "      <th>2174</th>\n",
-       "      <th>0</th>\n",
-       "      <th>40</th>\n",
-       "      <th>United-States</th>\n",
-       "      <th>&lt;=50K</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Workclass</th>\n",
+       "      <th>Final Weight</th>\n",
+       "      <th>Education</th>\n",
+       "      <th>Education-Num</th>\n",
+       "      <th>Marital Status</th>\n",
+       "      <th>Occupation</th>\n",
+       "      <th>Relationship</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Capital Gain</th>\n",
+       "      <th>Capital Loss</th>\n",
+       "      <th>Hours per Week</th>\n",
+       "      <th>Native Country</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>50</td>\n",
+       "      <th>39</th>\n",
+       "      <td>State-gov</td>\n",
+       "      <td>77516</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>2174</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
        "      <td>Self-emp-not-inc</td>\n",
        "      <td>83311</td>\n",
        "      <td>Bachelors</td>\n",
@@ -63,8 +78,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>38</td>\n",
+       "      <th>38</th>\n",
        "      <td>Private</td>\n",
        "      <td>215646</td>\n",
        "      <td>HS-grad</td>\n",
@@ -81,8 +95,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>53</td>\n",
+       "      <th>53</th>\n",
        "      <td>Private</td>\n",
        "      <td>234721</td>\n",
        "      <td>11th</td>\n",
@@ -99,8 +112,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>28</td>\n",
+       "      <th>28</th>\n",
        "      <td>Private</td>\n",
        "      <td>338409</td>\n",
        "      <td>Bachelors</td>\n",
@@ -114,24 +126,6 @@
        "      <td>0</td>\n",
        "      <td>40</td>\n",
        "      <td>Cuba</td>\n",
-       "      <td>&lt;=50K</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>37</td>\n",
-       "      <td>Private</td>\n",
-       "      <td>284582</td>\n",
-       "      <td>Masters</td>\n",
-       "      <td>14</td>\n",
-       "      <td>Married-civ-spouse</td>\n",
-       "      <td>Exec-managerial</td>\n",
-       "      <td>Wife</td>\n",
-       "      <td>White</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>40</td>\n",
-       "      <td>United-States</td>\n",
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -150,11 +144,9 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32555</th>\n",
-       "      <td>27</td>\n",
+       "      <th>27</th>\n",
        "      <td>Private</td>\n",
        "      <td>257302</td>\n",
        "      <td>Assoc-acdm</td>\n",
@@ -171,8 +163,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32556</th>\n",
-       "      <td>40</td>\n",
+       "      <th>40</th>\n",
        "      <td>Private</td>\n",
        "      <td>154374</td>\n",
        "      <td>HS-grad</td>\n",
@@ -189,8 +180,7 @@
        "      <td>&gt;50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32557</th>\n",
-       "      <td>58</td>\n",
+       "      <th>58</th>\n",
        "      <td>Private</td>\n",
        "      <td>151910</td>\n",
        "      <td>HS-grad</td>\n",
@@ -207,8 +197,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32558</th>\n",
-       "      <td>22</td>\n",
+       "      <th>22</th>\n",
        "      <td>Private</td>\n",
        "      <td>201490</td>\n",
        "      <td>HS-grad</td>\n",
@@ -225,8 +214,7 @@
        "      <td>&lt;=50K</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32559</th>\n",
-       "      <td>52</td>\n",
+       "      <th>52</th>\n",
        "      <td>Self-emp-inc</td>\n",
        "      <td>287927</td>\n",
        "      <td>HS-grad</td>\n",
@@ -244,60 +232,73 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>32560 rows × 15 columns</p>\n",
+       "<p>32561 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       39          State-gov   77516    Bachelors   13        Never-married  \\\n",
-       "0      50   Self-emp-not-inc   83311    Bachelors   13   Married-civ-spouse   \n",
-       "1      38            Private  215646      HS-grad    9             Divorced   \n",
-       "2      53            Private  234721         11th    7   Married-civ-spouse   \n",
-       "3      28            Private  338409    Bachelors   13   Married-civ-spouse   \n",
-       "4      37            Private  284582      Masters   14   Married-civ-spouse   \n",
-       "...    ..                ...     ...          ...  ...                  ...   \n",
-       "32555  27            Private  257302   Assoc-acdm   12   Married-civ-spouse   \n",
-       "32556  40            Private  154374      HS-grad    9   Married-civ-spouse   \n",
-       "32557  58            Private  151910      HS-grad    9              Widowed   \n",
-       "32558  22            Private  201490      HS-grad    9        Never-married   \n",
-       "32559  52       Self-emp-inc  287927      HS-grad    9   Married-civ-spouse   \n",
+       "                  Age   Workclass  Final Weight   Education  \\\n",
+       "39          State-gov       77516     Bachelors          13   \n",
+       "50   Self-emp-not-inc       83311     Bachelors          13   \n",
+       "38            Private      215646       HS-grad           9   \n",
+       "53            Private      234721          11th           7   \n",
+       "28            Private      338409     Bachelors          13   \n",
+       "..                ...         ...           ...         ...   \n",
+       "27            Private      257302    Assoc-acdm          12   \n",
+       "40            Private      154374       HS-grad           9   \n",
+       "58            Private      151910       HS-grad           9   \n",
+       "22            Private      201490       HS-grad           9   \n",
+       "52       Self-emp-inc      287927       HS-grad           9   \n",
        "\n",
-       "             Adm-clerical   Not-in-family   White     Male   2174   0   40  \\\n",
-       "0         Exec-managerial         Husband   White     Male      0   0   13   \n",
-       "1       Handlers-cleaners   Not-in-family   White     Male      0   0   40   \n",
-       "2       Handlers-cleaners         Husband   Black     Male      0   0   40   \n",
-       "3          Prof-specialty            Wife   Black   Female      0   0   40   \n",
-       "4         Exec-managerial            Wife   White   Female      0   0   40   \n",
-       "...                   ...             ...     ...      ...    ...  ..  ...   \n",
-       "32555        Tech-support            Wife   White   Female      0   0   38   \n",
-       "32556   Machine-op-inspct         Husband   White     Male      0   0   40   \n",
-       "32557        Adm-clerical       Unmarried   White   Female      0   0   40   \n",
-       "32558        Adm-clerical       Own-child   White     Male      0   0   20   \n",
-       "32559     Exec-managerial            Wife   White   Female  15024   0   40   \n",
+       "          Education-Num      Marital Status      Occupation  Relationship  \\\n",
+       "39        Never-married        Adm-clerical   Not-in-family         White   \n",
+       "50   Married-civ-spouse     Exec-managerial         Husband         White   \n",
+       "38             Divorced   Handlers-cleaners   Not-in-family         White   \n",
+       "53   Married-civ-spouse   Handlers-cleaners         Husband         Black   \n",
+       "28   Married-civ-spouse      Prof-specialty            Wife         Black   \n",
+       "..                  ...                 ...             ...           ...   \n",
+       "27   Married-civ-spouse        Tech-support            Wife         White   \n",
+       "40   Married-civ-spouse   Machine-op-inspct         Husband         White   \n",
+       "58              Widowed        Adm-clerical       Unmarried         White   \n",
+       "22        Never-married        Adm-clerical       Own-child         White   \n",
+       "52   Married-civ-spouse     Exec-managerial            Wife         White   \n",
        "\n",
-       "        United-States   <=50K  \n",
-       "0       United-States   <=50K  \n",
-       "1       United-States   <=50K  \n",
-       "2       United-States   <=50K  \n",
-       "3                Cuba   <=50K  \n",
-       "4       United-States   <=50K  \n",
-       "...               ...     ...  \n",
-       "32555   United-States   <=50K  \n",
-       "32556   United-States    >50K  \n",
-       "32557   United-States   <=50K  \n",
-       "32558   United-States   <=50K  \n",
-       "32559   United-States    >50K  \n",
+       "       Race    Sex   Capital Gain   Capital Loss  Hours per Week  \\\n",
+       "39     Male   2174              0             40   United-States   \n",
+       "50     Male      0              0             13   United-States   \n",
+       "38     Male      0              0             40   United-States   \n",
+       "53     Male      0              0             40   United-States   \n",
+       "28   Female      0              0             40            Cuba   \n",
+       "..      ...    ...            ...            ...             ...   \n",
+       "27   Female      0              0             38   United-States   \n",
+       "40     Male      0              0             40   United-States   \n",
+       "58   Female      0              0             40   United-States   \n",
+       "22     Male      0              0             20   United-States   \n",
+       "52   Female  15024              0             40   United-States   \n",
        "\n",
-       "[32560 rows x 15 columns]"
+       "    Native Country  \n",
+       "39           <=50K  \n",
+       "50           <=50K  \n",
+       "38           <=50K  \n",
+       "53           <=50K  \n",
+       "28           <=50K  \n",
+       "..             ...  \n",
+       "27           <=50K  \n",
+       "40            >50K  \n",
+       "58           <=50K  \n",
+       "22           <=50K  \n",
+       "52            >50K  \n",
+       "\n",
+       "[32561 rows x 14 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(\"C:/Users/sunip/Documents/UBCO/COSC301/Project/course-project-solo_122/data/raw/adult.data\")\n",
+    "df = pd.read_csv(\"../../data/raw/adult.data\")\n",
     "df"
    ]
   },
